--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -26,42 +26,40 @@ h1 {
     padding-top: 1vh;
     padding-bottom: 2vh;
     width: 33%
-    /* padding-right: 53vh; */
 }
 
 .slider {
-    -webkit-appearance: none;  /* Override default CSS styles */
+    -webkit-appearance: none; /*  Override default CSS styles */
     appearance: none;
     position: relative;
     width: 100%; 
-    height: 10px; /* Specified height */
-    background: #98D7C2; /* Grey background */
-    outline: none; /* Remove outline */
-    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    height: 10px; 
+    background: #98D7C2; 
+    outline: none; 
+    opacity: 0.7; 
+    -webkit-transition: .2s; 
     transition: opacity .2s;
     align-self: center;
   }
   
-  /* Mouse-over effects */
   .slider:hover {
-    opacity: 10; /* Fully shown on mouse-over */
+    opacity: 10; 
   }
   
   .slider::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Override default look */
+    -webkit-appearance: none; 
     appearance: none;
-    width: 10px; /* Set a specific slider handle width */
-    height: 10px; /* Slider handle height */
-    background: red; /* Green background */
-    cursor: pointer; /* Cursor on hover */
+    width: 10px; 
+    height: 10px; 
+    background: red; 
+    cursor: pointer; 
   }
   
   .slider::-moz-range-thumb {
-    width: 10px; /* Set a specific slider handle width */
-    height: 10px; /* Slider handle height */
-    background: #167D7F; /* Green background */
-    cursor: alias; /* Cursor on hover */
+    width: 10px; 
+    height: 10px;
+    background: #167D7F; 
+    cursor: alias; 
   }
 
 button {
